--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>Phaser - Breakout Trial</title>
+	<title>Phaser - Tween</title>
 	<script type="text/javascript" src="lib/js/phaser/phaser.js"></script>
     <style type="text/css">
         body {
@@ -11,6 +11,6 @@
     </style>
 </head>
 <body>
-    <script type="text/javascript" src="src/js/game.js"></script>
+    <script type="text/javascript" src="src/js/tween.js"></script>
 </body>
 </html>
