Game states are working now!
Objective was to have two 'game' stages in sequence:
1. a tween of the einstein sprite
2. a text demo

Both are working via simple game state logic adapted
from the Shootout sample code.

Cleaned up the project of all the extraneous breakout junk.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>Phaser - Tween</title>
+	<title>Phaser - Tween+Text Demo</title>
 	<script type="text/javascript" src="lib/js/phaser/phaser.js"></script>
     <style type="text/css">
         body {
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <div id="game"></div>
     <script type="text/javascript" src="src/js/tween.js"></script>
 </body>
 </html>
